--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"webpack-dev-server": "^5.0.4"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.12.1",
-		"jquery": "^3.7.1"
+		"@babel/polyfill": "^7.12.1"
 	}
 }
